--- a/index.Rmd
+++ b/index.Rmd
@@ -272,15 +272,15 @@ n1 <- rPlot(freq ~ x, data = count_swear_dates, type = "point")
 
 ## Swear words (2)
 
-```{r, eval=TRUE, echo=TRUE, results = "asis"}
+```{r, eval=TRUE, echo=TRUE, comment=NA, results = "asis"}
 load(file="swear_plot_obj.RData")
 # n1$print("chart_swear_words")
-# n1  -- won't show up in browser, issue bug to slidify maybe?
+n1 # -- won't show up in browser, issue bug to slidify maybe?
 ```
 
-<center>
+<!-- <center>
 <img src="https://dl.dropboxusercontent.com/u/103068909/swearing.png" />
-</center>
+</center> -->
 
 ---
 
