--- a/index.Rmd
+++ b/index.Rmd
@@ -274,7 +274,9 @@ fastgreedy.community(g, merges=TRUE, modularity=TRUE,
 ## (Smaller) sample discussion network
 
 ```{sql}
-create table github_discussions_selected_users as select d.* from github_discussions d join (select distinct user_id from project_members_with_owners pm join selected_repos sr on pm.repo_id = sr.repo_id) as s
+create table github_discussions_selected_users as select d.* from github_discussions d 
+join (select distinct user_id from project_members_with_owners pm join 
+selected_repos sr on pm.repo_id = sr.repo_id) as s
 on d.user_id = s.user_id;
 ```
 
@@ -282,7 +284,7 @@ on d.user_id = s.user_id;
    * having at least 5 project members
    * existing at least for 2 years
    * with minimum of 100 commits
-* Number of utterances downgraded slightly - from 2.9 mln to 1.5 mln :(
+* Number of utterances downgraded slightly - from 2.9 mln to 1.5 mln
 
 ---
 
@@ -290,6 +292,8 @@ on d.user_id = s.user_id;
 
 * One of the most important features in the graph theory, is a `clustering coefficient` of the network, sometimes called `transivity` (especially in R),
 * Is a measure of the degree to which nodes in a graph tend to cluster together.
+
+![coefficient.png](https://dl.dropboxusercontent.com/u/103068909/coefficient.png)
 
 ---
 
